[metadata]
name = jupyter-kite
description = Kite WebSocket proxy for Jupyter notebook or lab server for Python 3.5+.
long_description = file: ./py_src/jupyter_kite/README.md
long_description_content_type = text/markdown
url = https://github.com/kiteco/jupyterlab-kite
author = Kite
author_email = support@kite.com
keywords =
    Interactive
    Language Server
    LSP
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python

[options]
package_dir =
    = py_src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    notebook >=4.3.1
    setuptools

[options.packages.find]
where =
    py_src

[options.entry_points]
jupyter_kite_spec_v1 =
    kite-language-server = jupyter_kite.specs:kite

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88
ignore = E203

[tool:pytest]
junit_family=xunit2
addopts =
    --pyargs jupyter_kite
    --cov jupyter_kite
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3

[pycodestyle]
ignore = E203,W503,C0330
max-line-length = 88

[mypy-traitlets.*]
ignore_missing_imports = True

[mypy-notebook]
ignore_missing_imports = True

[mypy-jupyterlab.*]
ignore_missing_imports = True

[mypy-notebook.*]
ignore_missing_imports = True

[mypy-nbformat.*]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True

[mypy-ctypes.*]
ignore_missing_imports = True

[mypy-robot.*]
ignore_missing_imports = True

[mypy-jsonschema]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-ruamel_yaml]
ignore_missing_imports = True

[mypy-jupyter_lsp.non_blocking]
ignore_errors = True

[mypy-pytest_azurepipelines]
ignore_missing_imports = True

[mypy-entrypoints]
ignore_missing_imports = True

[mypy-grapvhiz]
ignore_missing_imports = True

[mypy-IPython]
ignore_missing_imports = True

[mypy-nbsphinx]
ignore_missing_imports = True

[mypy-graphviz]
ignore_missing_imports = True
