[metadata]
name = jupyter-kite
description = Multi-Language Server WebSocket proxy for JupyterLab server.
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://github.com/kiteco/jupyterlab-kite
author = Kite
author_email = support@kite.com
keywords =
    Interactive
    Language Server
    LSP
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6

install_requires =
    tornado >=5.1.0
    jupyter_server >=1.1.2
    entrypoints

[options.entry_points]
jupyter_kite_spec_v1 =
    kitels = jupyter_kite.specs:kite

[tool:pytest]
junit_family=xunit2
addopts =
    --pyargs jupyter_kite
    --cov jupyter_kite
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8