[metadata]
name = jupyterlab-kite
description = Kite integration for JupyterLab
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://github.com/kiteco/jupyterlab-kite
author = Kite
author_email = support@kite.com
keywords =
    Interactive
    Language Server
    LSP
    JupyterLab
    JupyterLab3
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Programming Language :: Python

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6

install_requires =
    jupyter_kite >= 2.0.0
    jupyterlab >=3.0.0,<4.0.0a0